Created initial setup of stat blocks

--- a/idle_rpg/src/scss/theme.scss
+++ b/idle_rpg/src/scss/theme.scss
@@ -39,6 +39,10 @@ body {
 			}
 		}
 
+		.character-stats{
+			// display: flex;
+			// flex-direction: column;
+		}
 		.control-row{
 			display: flex;
 			margin: 10px auto;
