--- a/idle_rpg/src/scss/theme.scss
+++ b/idle_rpg/src/scss/theme.scss
@@ -20,8 +20,11 @@ body {
 			margin: 0 auto;
 			min-width: inherit;
 			
-			p{
-				max-width: 535px;
+
+			.autopilot {
+				position: absolute;
+				right:50px;
+				top:135px;
 			}
 		}
 
@@ -72,6 +75,12 @@ body {
 			.description{
 				flex:1 ;
 				position: unset;
+
+				p{
+					margin-top:25px;
+					max-width: 535px;
+				}
+
 			}
 		}
 
